@startuml
' ---------------------------------------------------------
' Conventions:
' - Money: Decimal (code: rust_decimal::Decimal, db: NUMERIC(19,4))
' - Timestamps: TimestampTZ (db: TIMESTAMPTZ)
' - UUID: Uuid (db: UUID)
' - snake_case para colunas no banco; camelCase no código
' ---------------------------------------------------------

' skinparam componentStyle rectangle
' skinparam shadowing false

class Customer {
  + id: Uuid
  + fullName: String
  + email: String
  + cpf: String
  + isActive: Boolean
  + createdAt: TimestampTZ
  + updatedAt: TimestampTZ
}

enum AccountType {
  CHECKING
  SAVINGS
  PAYMENT
}

class Account {
  + id: Uuid
  + customerId: Uuid
  + accountType: AccountType
  + currency: String
  + availableBalance: Decimal
  + ledgerBalance: Decimal
  + createdAt: TimestampTZ
  + updatedAt: TimestampTZ
}

enum PixKeyType {
  CPF
  CNPJ
  EMAIL
  PHONE
  EVP      
}

class PixKey {
  + id: Uuid
  + accountId: Uuid
  + keyType: PixKeyType
  + keyValue: String
  + isActive: Boolean
  + createdAt: TimestampTZ
  + deactivatedAt: TimestampTZ
}

enum TransferStatus {
  PENDING
  POSTED
  REVERSED
  FAILED
}

class Transfer {
  + id: Uuid
  + externalId: String 
  + debitAccountId: Uuid
  + creditAccountId: Uuid
  + amount: Decimal
  + currency: String         
  + status: TransferStatus
  + narrative: String    
  + createdAt: TimestampTZ
  + postedAt: TimestampTZ
  + reversedAt: TimestampTZ
}

enum EntryType {
  DEBIT
  CREDIT
}

class LedgerEntry {
  + id: Uuid
  + transferId: Uuid
  + accountId: Uuid
  + entryType: EntryType
  + amount: Decimal
  + createdAt: TimestampTZ
}

class Statement {
  + id: Uuid
  + accountId: Uuid
  + periodStart: TimestampTZ
  + periodEnd: TimestampTZ
  + openingBalance: Decimal
  + closingBalance: Decimal
  + generatedAt: TimestampTZ
}

' ---------- Cardinalities ----------
Customer "1" -- "0..*" Account : owns >
Account  "1" -- "0..*" PixKey  : has >
Account  "1" -- "0..*" LedgerEntry : posts >
Transfer "1" -- "2"   LedgerEntry : splits into >
Transfer "0..*" -- "1" Account : debitAccount >
Transfer "0..*" -- "1" Account : creditAccount >
Account  "1" -- "0..*" Statement : aggregates >

@enduml